fixed layout bugs

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1180,6 +1180,7 @@ h1, h2, h3, h4, h5, h6 {
     border: 1px solid #fc7700;
     color: #fff;
     background-color: #fc7700;
+    margin-top: 5px;
 }
 
 .single-blog:hover.single-blog .btn-primary:hover {
